err/astro-pyxis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyxides'...
Listing './lib/python3.5/site-packages/Pyxides/_utils'...
Compiling './lib/python3.5/site-packages/Pyxides/gce.py'...
***   File "./lib/python3.5/site-packages/Pyxides/gce.py", line 120
    raise TypeError,"unknown data type for %s"%key;
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pyxides/im'...
Compiling './lib/python3.5/site-packages/Pyxides/lsm.py'...
***   File "./lib/python3.5/site-packages/Pyxides/lsm.py", line 73
    print "     ",line;
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pyxis'...
Compiling './lib/python3.5/site-packages/Pyxis/Commands.py'...
***   File "./lib/python3.5/site-packages/Pyxis/Commands.py", line 99
    print output;
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pyxis/Internals.py'...
***   File "./lib/python3.5/site-packages/Pyxis/Internals.py", line 470
    raise ValueError,"invalid namespace %s"%nsname;
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Pyxis/ModSupport.py'...
***   File "./lib/python3.5/site-packages/Pyxis/ModSupport.py", line 26
    raise RuntimeError,"a different Pyxis module named '%s' is already registered"%modname;
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/astro_pyxis-1.4.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
